--- a/SlicerMRClass/Resources/UI/SlicerMRClass.ui
+++ b/SlicerMRClass/Resources/UI/SlicerMRClass.ui
@@ -12,7 +12,39 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
+    <widget class="QPlainTextEdit" name="ListPatientsText">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+     <property name="backgroundVisible">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="ctkComboBox" name="PatientIDlist"/>
+   </item>
+   <item>
+    <widget class="QPlainTextEdit" name="ListStudiesText">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+     <property name="backgroundVisible">
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="ctkComboBox" name="StudyIDlist"/>
