--- a/SlicerMRClass/Resources/UI/SlicerMRClass.ui
+++ b/SlicerMRClass/Resources/UI/SlicerMRClass.ui
@@ -22,6 +22,19 @@
     <widget class="ctkComboBox" name="PatientIDlist"/>
    </item>
    <item>
+    <spacer name="spacerPatient">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
     <widget class="QLabel" name="ListStudiesLabel">
      <property name="text">
       <string>TextLabel</string>
@@ -30,6 +43,29 @@
    </item>
    <item>
     <widget class="ctkComboBox" name="StudyIDlist"/>
+   </item>
+   <item>
+    <spacer name="spacerStudy">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <widget class="QLabel" name="ListSeriesLabel">
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QTableView" name="ListSeriesTable"/>
    </item>
    <item>
     <widget class="QPushButton" name="applyButton">
