updated series list formatting

--- a/SlicerMRClass/Resources/UI/SlicerMRClass.ui
+++ b/SlicerMRClass/Resources/UI/SlicerMRClass.ui
@@ -65,7 +65,26 @@
     </widget>
    </item>
    <item>
-    <widget class="QTableView" name="ListSeriesTable"/>
+    <widget class="QTableView" name="ListSeriesTable">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="horizontalScrollBarPolicy">
+      <enum>Qt::ScrollBarAlwaysOff</enum>
+     </property>
+     <property name="sizeAdjustPolicy">
+      <enum>QAbstractScrollArea::AdjustToContents</enum>
+     </property>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+     <attribute name="verticalHeaderStretchLastSection">
+      <bool>false</bool>
+     </attribute>
+    </widget>
    </item>
    <item>
     <widget class="QPushButton" name="applyButton">
